# inkly

./: .env.example  .gitignore  Cargo.toml  Dockerfile.cuda  Dockerfile.mkl  README.md  install.sh  package-lock.json  package.json
.cursor/rules/: 00-inkly-core-constraints.mdc  10-rust-axum-standards.mdc  20-tantivy-standards.mdc  30-react-tailwind-standards.mdc
.github/workflows/: audit.yaml  build.yaml
backend/: Cargo.toml  build.rs
backend/src/: auth.rs  cli.rs  config.rs  error.rs  i18n.rs  locale.rs  main.rs  routes.rs  state.rs  static_assets.rs  summary_queue.rs
crates/inkly-contract/: Cargo.toml
crates/inkly-contract/src/: dto.rs
crates/inkly-search/: Cargo.toml
crates/inkly-search/benches/: index_build.rs  search_catalog.rs
crates/inkly-search/src/: error.rs  index_manager.rs  lib.rs  migrate.rs  storage_meta.rs
crates/inkly-summarize/: Cargo.toml
crates/inkly-summarize/src/: device.rs  error.rs  lib.rs  model.rs  postprocess.rs  prompt.rs  token_output_stream.rs
data/: .managed.json  meta.json
data/tantivy/: meta.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Dashboard.tsx  DocumentView.tsx  LoginPage.tsx  RequireAuth.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: ApiErrorDialog.tsx  BodyEditorModal.tsx  BrandHeader.tsx  CatalogSidebar.tsx  DocumentBody.tsx  HtmlUploadCleanupModal.tsx  HtmlUploadCleanupPanel.tsx  IndexDocumentForm.tsx  NewDocumentModal.tsx  SearchResultsDialog.tsx  SidebarLayout.tsx  TextUploadEditModal.tsx  TiptapEditor.tsx
frontend/src/hooks/: useCatalog.ts  useModalBehavior.ts  useNewDocumentForm.ts  useSearch.ts
frontend/src/i18n/: context.tsx  strings.ts
frontend/src/i18n/locales/: en.ts  zh-Hans.ts
frontend/src/lib/: apiErrorNotify.ts  docLink.ts  documentContent.ts  encoding.ts  htmlToMarkdown.test.ts  htmlToMarkdown.ts
frontend/src/types/: turndown-plugin-gfm.d.ts
scripts/: build-backend-cpu.sh  build-backend-gpu.sh  build-backend-mkl.sh  build.sh  dev.sh  mkl-env.sh  model-bench.sh
