[package]
name = "inkly"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Candle on NVIDIA (Linux / Windows). Requires CUDA toolkit (`nvcc` in PATH).
cuda = ["inkly-summarize/cuda"]
# Candle on Apple Silicon / macOS GPU. Requires Xcode toolchain.
metal = ["inkly-summarize/metal"]
accelerate = ["inkly-summarize/accelerate"]
mkl = ["inkly-summarize/mkl"]

[dependencies]
axum = { version = "0.8.8", features = ["macros", "multipart"] }
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
subtle = "2.6.1"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id", "limit", "cors"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

inkly-contract = { path = "../crates/inkly-contract" }
inkly-search = { path = "../crates/inkly-search" }
inkly-summarize = { path = "../crates/inkly-summarize" }
include_dir = "0.7.4"
mime_guess = "2.0.5"
