[package]
name = "inkly"
version = "0.5.2"
edition = "2024"

[features]
default = []
cuda = ["inkly-summarize/cuda"]
metal = ["inkly-summarize/metal"]
vulkan = ["inkly-summarize/vulkan"]

[dependencies]
axum = { version = "0.8.8", features = ["macros", "multipart"] }
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
subtle = "2.6.1"
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id", "limit", "cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

inkly-contract = { path = "../crates/inkly-contract" }
inkly-search = { path = "../crates/inkly-search" }
inkly-summarize = { path = "../crates/inkly-summarize" }
include_dir = "0.7.4"
mime_guess = "2.0.5"
rusqlite = { version = "0.37.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.19.1"
