[package]
name = "inkly"
version = "0.6.4"
edition = "2024"

[features]
default = []
cuda = ["inkly-summarize/cuda"]
metal = ["inkly-summarize/metal"]
vulkan = ["inkly-summarize/vulkan"]

[dependencies]
axum = { version = "0.8.9", features = ["macros", "multipart"] }
clap = { version = "4.6", features = ["derive"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
subtle = "2.6.1"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id", "limit", "cors", "compression-gzip", "compression-deflate", "compression-br", "compression-zstd", "decompression-gzip", "decompression-deflate", "decompression-br", "decompression-zstd"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

inkly-contract = { path = "../crates/inkly-contract" }
inkly-search = { path = "../crates/inkly-search" }
inkly-summarize = { path = "../crates/inkly-summarize" }
include_dir = "0.7.4"
mime_guess = "2.0.5"
rusqlite = { version = "0.38.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.27.0"
