[package]
name = "inkly-search"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tantivy = "0.26.0"
tantivy-jieba = "0.19"
thiserror = "2.0.18"
time = { version = "0.3", default-features = false, features = ["formatting", "std"] }
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.19.1"
