[package]
name = "inkly-search"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tantivy = "0.26.0"
tantivy-jieba = "0.19"
thiserror = "2.0.18"
time = { version = "0.3", default-features = false, features = ["formatting", "std"] }

[dev-dependencies]
criterion = "0.8"
tempfile = "3.27.0"

[[bench]]
name = "search_catalog"
harness = false

[[bench]]
name = "index_build"
harness = false
