[package]
name = "inkly-search"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sqlite-simple-tokenizer = "0.5.0"
thiserror = "2.0.18"
time = { version = "0.3", default-features = false, features = ["formatting", "std"] }

# Read-only dependency: used by `migrate` to load pre-v5 on-disk Tantivy indexes
# so we can rebuild them into SQLite/FTS5. Not used at runtime for fresh stores.
tantivy = "0.26.1"

[dev-dependencies]
criterion = "0.8"
tempfile = "3.27.0"

[[bench]]
name = "search_catalog"
harness = false

[[bench]]
name = "index_build"
harness = false
