[package]
name = "inkly-summarize"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
hf-hub = "0.4"
thiserror = "2"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
tracing = "0.1"

[features]
default = []
cuda = [
  "candle-core/cuda",
  "candle-nn/cuda",
  "candle-transformers/cuda",
]
accelerate = [
  "candle-core/accelerate",
  "candle-nn/accelerate",
  "candle-transformers/accelerate",
]
metal = [
  "candle-core/metal",
  "candle-nn/metal",
  "candle-transformers/metal",
]
