[package]
name = "inkly-summarize"
version = "0.1.0"
edition = "2024"

[dependencies]
encoding_rs = "0.8"
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
html2text = "0.16"
llama-cpp-2 = "0.1.141"
thiserror = "2"
tracing = "0.1"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
